{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 175,
  "lineage": "7b14d3c5-9f3c-3da6-3a4f-ed409b716cee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "teste-4",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:797856765181:instance/i-04b73041a02278d8c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b73041a02278d8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paulo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7f4f13820a84852",
            "private_dns": "ip-10-0-0-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.59",
            "public_dns": "ec2-54-234-249-233.compute-1.amazonaws.com",
            "public_ip": "54.234.249.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0251bde8fa7efc301",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5978ff8549fa986",
            "tags": {
              "Name": "teste-4"
            },
            "tags_all": {
              "Name": "teste-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08df1d895e9eb22ac"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server",
            "aws_subnet.subnet_east-1",
            "aws_vpc.vpc_east-1"
          ]
        },
        {
          "index_key": "teste-5",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:797856765181:instance/i-0f777d3e251bbedd9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f777d3e251bbedd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paulo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b559f396954c91c4",
            "private_dns": "ip-10-0-0-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.230",
            "public_dns": "ec2-3-88-231-75.compute-1.amazonaws.com",
            "public_ip": "3.88.231.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083ca1f03822b8be8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5978ff8549fa986",
            "tags": {
              "Name": "teste-5"
            },
            "tags_all": {
              "Name": "teste-5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01368fc70cb9e7633"
            ]
          },
          "dependencies": [
            "aws_security_group.app_server",
            "aws_subnet.subnet_east-1",
            "aws_vpc.vpc_east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:route-table/rtb-0835923123132c513",
            "id": "rtb-0835923123132c513",
            "owner_id": "797856765181",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a47266c75708632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042ef12f37f2e7a0f",
            "route_table_id": "rtb-0835923123132c513",
            "subnet_id": "subnet-0c5978ff8549fa986"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.subnet_east-1",
            "aws_vpc.vpc_east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "df",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:security-group/sg-0aa08e4080700f6dc",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa08e4080700f6dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "df",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a47266c75708632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        },
        {
          "index_key": "security-group-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:security-group/sg-08df1d895e9eb22ac",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08df1d895e9eb22ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/20"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-2",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a47266c75708632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        },
        {
          "index_key": "security-group-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:security-group/sg-01368fc70cb9e7633",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01368fc70cb9e7633",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/20"
                ],
                "description": "",
                "from_port": 10,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10
              }
            ],
            "name": "security-group-3",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a47266c75708632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        },
        {
          "index_key": "security-group-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:security-group/sg-05bb2e9804e82c7a5",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bb2e9804e82c7a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10
              }
            ],
            "name": "security-group-4",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a47266c75708632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:subnet/subnet-0c5978ff8549fa986",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5978ff8549fa986",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797856765181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_east-1"
            },
            "tags_all": {
              "Name": "subnet_east-1"
            },
            "vpc_id": "vpc-06a47266c75708632"
          },
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:vpc/vpc-06a47266c75708632",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0a372f91649fb2e50",
            "default_route_table_id": "rtb-01c0cf807c55c6998",
            "default_security_group_id": "sg-01988448922201cc3",
            "dhcp_options_id": "dopt-31abc44a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a47266c75708632",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c0cf807c55c6998",
            "owner_id": "797856765181",
            "tags": {
              "Name": "vpc_east-1"
            },
            "tags_all": {
              "Name": "vpc_east-1"
            }
          }
        }
      ]
    }
  ]
}